# chatbot

./: .gitignore  .sops.yaml  FRONTEND_CONCEPT.md  README.md  spec.md
.github/workflows/: build-push.yml
app/: Dockerfile  main.py  pyproject.toml
chat-ui/: Dockerfile  nginx.conf
chat-ui/public/: index.html
chat-ui/public/css/: style.css
chat-ui/public/js/: chat.js
deploy/: setup.sh
docker/: .env.example  Caddyfile  docker-compose.yml
scripts/: upload-secrets.sh
terraform/: main.tf  outputs.tf  variables.tf
