[project]
name = "chatbot-api"
version = "1.0.0"
description = "Local LLM Chatbot with Ollama"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.2",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
